libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/newtype-4.jsonc
//@ run: fail
//@ description: newtype/4 should error out
[
  "::kernel::special_form::newtype",
  "x",
  "Boolean",
  ["+", "x", "x"],
  { "#literal": true }
  //~^ ERROR Remove this argument
]
